--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "tailwind.config.js"
+    ".next/types/**/*.ts"
+    // "tailwind.config.js"
   ],
   "exclude": ["node_modules"]
 }
