--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@fontsource/anuphan": "^5.1.1",
+    "@tailwindcss/postcss": "^4.0.9",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
